# paper-workflow

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md
.claude/: CLAUDE.md  settings.json
.claude/agents/: ingest-operator.md
.claude/rules/: paper-error-handling.md  paper-output-format.md  paper-routing.md
.claude/skills/: paper-analyze.md  paper-evidence.md  paper-ingest.md  paper-search.md  paper-status.md
.github/workflows/: tests.yml
backend/: __init__.py  pyproject.toml
backend/analysis/: __init__.py  single_paper.py
backend/common/: config.py  db.py  embeddings.py  errors.py  llm.py  logging_config.py  models.py
backend/ingest/: __init__.py  chunker.py  deduplicator.py  downloader.py  embedder.py  indexer.py  mcp_server.py  parser.py  pipeline.py  state_machine.py  structurer.py  tools.py
backend/retrieval/: __init__.py  filters.py  hybrid.py  mcp_server.py  query_rewriter.py  text_search.py  tools.py  vector_search.py
backend/search/: __init__.py  arxiv_provider.py  base.py  s2_provider.py
backend/storage/: __init__.py  faiss_store.py  file_store.py  sqlite_store.py
configs/: default.yaml
docs/: 00_master_index.md  01_architecture_and_boundaries.md  02_schema_and_tool_contracts.md  03_claude_code_adaptation.md  04_implementation_plan.md  05_execution_backlog.md  06_session_prompts.md  configuration.md  faq.md  fork-guide.md
scripts/: benchmark_single_paper_analysis.py  health_check.py  install.sh  paper-workflow.sh  run_single_paper_e2e.py  setup.sh  start_servers.sh  uninstall.sh
tests/: conftest.py
(+27 files in other folders)
